--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import"./utils/vars";
 @import"./utils/hidden";
+@import"./utils/breakpoints";
 
 @import"./base/reset";
 @import"./base/common";
@@ -8,6 +9,7 @@
 @import"./components/button";
 @import"./components/container";
 @import"./components/logo";
+@import"./components/mobile-menu";
 @import"./components/modal";
 @import"./components/social_media";
 @import"./components/title";
