--- a/sass/components/_button-portfolio.scss
+++ b/sass/components/_button-portfolio.scss
@@ -30,12 +30,19 @@
 
 .portfolio-hero-batton {
     display: flex;
-    justify-content: center;
-
-    margin-top: 0;
-    margin-bottom: 50px;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    padding-top: 0;
+    padding-bottom: 30px;  
+    @media screen and (min-width: 768px) {
+            justify-content: center;
+            padding-bottom: 40px;        
+        }
+    @media screen and (min-width: 768px) {
+        justify-content: center;
+        padding-bottom: 50px;
+        }
 }
 
-.portfolio-hero-link+.portfolio-hero-link {
-    margin-left: 8px;
-}
+    
+
