--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -27,9 +27,14 @@
 }
 
 .modal {
+    width: 450px;
+    min-height: 609px;
+
+    @media screen and (min-width: 1200px) {
+            width: 528px;
+            min-height: 581px;
+        }
     position: absolute;
-    width: 528px;
-    min-height: 581px;
     padding: 40px;
 
     background: var(--hero-text-color);
@@ -150,10 +155,18 @@
 }
 
 .checkbox-text {
+
     font-weight: 400;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 12px;
+    line-height: 14px;
     letter-spacing: 0.03em;
+    white-space: nowrap;
+
+    @media screen and (min-width: 1200px){
+        font-size: 14px;
+        line-height: 24px;
+    }
+    
     margin-bottom: 30px;
 
     color: #757575;
