--- a/sass/components/_social_media.scss
+++ b/sass/components/_social_media.scss
@@ -1,5 +1,7 @@
 .social-media {
     display: flex;
+    justify-content: center;
+    align-items: center;
 
     &__item+&__item{
         margin-left: 10px;
