--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -1,24 +1,43 @@
 .benefits {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @media screen and (min-width: 1200px){
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
 
 .section-benefits__name {
     display: none;
+
+    
 }
 
 .benefits-list {
+    @media screen and (min-width: 768px) {
+        
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: -30px;
+        margin-left: -30px;}
 
-    display: flex;
-
-    &__item{
-
-        width: 270px;
-        &+& {margin-left: 30px;}}
+     &__item{
+        text-align: center;
+        margin-bottom: 30px;
+    @media screen and (min-width: 768px) {
+            text-align: start;
+            width: calc(100% / 2 - 30px);
+            margin-left: 30px;}
+    
+    @media screen and (min-width: 1200px) {
+            width: calc(100% / 4 - 30px);}
+    }
     
     &__container{
 
-        width: 270px;
+        width: 100%;
         height: 120px;
         margin-bottom: 30px;
         display: flex;
@@ -29,11 +48,15 @@
 
     &__title{
 
+        @media screen and (min-width: 480px){
+    
+        }
+
         margin-bottom: 10px;
         
         font-weight: 700;
         font-size: 14px;
-        line-height: 1.14;
+        line-height: 16px;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: var(--primary-text-color);}
