--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,26 +1,52 @@
 .section-clients {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    
+        @media screen and (min-width: 1199px) {
+            padding-top: 94px;
+            padding-bottom: 94px;
+        }
 
     &__title{
-        margin-bottom: 50px;
+        margin-bottom: 30px;
+
+        @media screen and (min-width: 768px) {
+                margin-bottom: 50px;
+            }
     }
 }
 
 .clients-list {
-    display: flex;
-    justify-content: center;
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: -30px;
+        margin-left: -30px;
 
-    &__item+&__item{
+    &__item{
+        margin-top: 30px;
         margin-left: 30px;
+        height: 92px;
+        width: calc(100% / 2 - 30px);
+            @media screen and (min-width: 768px) {
+                width: calc(100% / 3 - 30px);
+            }
+        
+            @media screen and (min-width: 1199px) {
+                width: calc(100% / 6 - 30px);
+            }
     }
 
     &__link{
+       
+
         display: flex;
         justify-content: center;
         align-items: center;
-        Width: 170px;
-        Height: 92px;
+        width: 100%;
+        height: 100%;
+
+        
+        
         
         border: 1px solid #AFB1B8;
         box-sizing: border-box;
