--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -7,12 +7,25 @@
     background-color: var(--secondary-color-background);
 }
 
-.footer .container {
-    display: flex;
-    align-items: baseline;
+ .footer .container {
+    @media screen and (min-width: 1200px){
+            display: flex;
+             align-items: baseline;}
+      }
+
+.section-footer__grid{
+    @media screen and (min-width: 768px) {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    
+    
 }
 
 .footer-title {
+    text-align: center;
+
     font-weight: 700;
     font-size: 14px;
     line-height: 16px;
@@ -22,8 +35,18 @@
 }
 
 .nivigation-footer {
+    text-align: center;
     min-width: 231px;
-    margin-right: 70px;
+    margin-bottom: 60px;
+
+    @media screen and (min-width: 768px) {
+            margin-right: 165px;
+        }
+
+    @media screen and (min-width: 1200px){
+        margin-right: 70px;
+    }
+    
 }
 
 .footer-nav__address {
@@ -70,7 +93,11 @@
 
 .footer-social-container {
     min-width: 206px;
-    margin-right: 93px;
+    margin-bottom: 60px;
+
+    @media screen and (min-width: 1200px) {
+            margin-right: 93px;
+        }
 
     &__title{
         margin-bottom: 20px;    
@@ -80,6 +107,12 @@
 // Footer-form
 
 .footer-form__label {
+    
+    justify-content: center;
+    @media screen and (min-width: 1200px) {
+            justify-content: start;
+        }
+        
     margin-bottom: 20px;
     display: flex;
 
@@ -93,12 +126,28 @@
 
 }
 
-.footer-form__wrap {
-    display: flex;
-}
+ .footer-form__wrap {
+     text-align: center;
+
+    @media screen and (min-width: 1200px) {
+            margin-right: 93px;
+            display: flex;
+            height: 50px;
+        }
+      
+ }
 
 .footer-form__input {
+    width: 100%;
+    margin-bottom: 20px;
+
+@media screen and (min-width: 768px){
+    width: 450px;
+}
+
+@media screen and (min-width: 1200px) {
     width: 358px;
+}
     height: 50px;
     padding-left: 10px;
 
@@ -111,8 +160,15 @@
 }
 
 .button-subscribe {
+    margin-left: auto;
+    margin-right: auto;
+    
     padding: 10px 28px;
-    margin-left: 12px;
+    
+    @media screen and (min-width: 1200px){
+        margin-left: 12px;
+    }
+
     line-height: 30px;
     display: flex;
     justify-content: center;
