--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,35 +1,92 @@
 .hero {
-    text-align: center;
-    padding-top: 200px;
-    padding-bottom: 200px;
+    max-width: 479px;
+    min-height: 400px;
+    padding-top: 118px;
+    padding-bottom: 118px;
+    
     margin-right: auto;
     margin-left: auto;
 
+    background-repeat: no-repeat;
+    background-position: center;
+    text-align: center;
+    
     background-color: var(--secondary-color-background);
     background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url(../images/hero-title.jpg);
-    max-width: 1600px;
-    background-repeat: no-repeat;
-    min-height: 600px;
-    background-position: center;
+        url(../images/hero-mobile.jpg);
 
+    @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: linear-gradient(to right,
+                        rgba(47, 48, 58, 0.4),
+                        rgba(47, 48, 58, 0.4)),
+                    url(../images/hero-mobile-2x.jpg);
+            }
+        
+    @media screen and (min-width: 768px) {
+        max-width: 768px;
+        
+        background-image: linear-gradient(to right,
+            rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)),
+            url(../images/hero-tablet.jpg);
+
+            @media (min-device-pixel-ratio: 2),
+                (min-resolution: 192dpi),
+                (min-resolution: 2dppx) {
+                    background-image: linear-gradient(to right,
+                            rgba(47, 48, 58, 0.4),
+                            rgba(47, 48, 58, 0.4)),
+                        url(../images/hero-tablet-2x.jpg);
+                }
+        }
+
+    @media screen and (min-width: 1199px) {
+        max-width: 1600px;
+        min-height: 600px;
+        padding-top: 200px;
+        padding-bottom: 200px;
+        
+        background-image: linear-gradient(to right,
+            rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)),
+            url(../images/hero-title.jpg);
+
+            @media (min-device-pixel-ratio: 2),
+                (min-resolution: 192dpi),
+                (min-resolution: 2dppx) {
+                    background-image: linear-gradient(to right,
+                            rgba(47, 48, 58, 0.4),
+                            rgba(47, 48, 58, 0.4)),
+                        url(../images/hero-title-2x.jpg);
+                }
+                }
+        
     &__title{
-        width: 696px;
+        width: 360px;
         margin: 0 auto;
         margin-bottom: 30px;
-        
+
         font-weight: 900;
-        font-size: 44px;
-        line-height: 1.36;
+        font-size: 26px;
+        line-height: 42px;
+        
+        text-align: center;
         letter-spacing: 0.06em;
-        text-transform: uppercase;
+        text-transform: uppercase; 
         color: var(--hero-text-color);
+
+        @media screen and (min-width: 1199px){
+            width: 696px;
+            font-size: 44px;
+            line-height: 1.36;   
+        }
     }
 
 }
-
 
 .button-page {
     min-width: 200px;
