--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -2,35 +2,57 @@
     display: none;
 }
 
-.portfolio-hero {
-    padding-top: 94px;
-    padding-bottom: 94px;
+.btn-portfolio{
+    &:not(:last-child) {
+            margin-right: 8px;
+            margin-bottom: 15px;
+        }
+    
+        display: block;
+        transition-property:box-shadow;
+        transition-duration:250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-    &-list{
+.portfolio-hero {
+
+    padding-top: 40px;
+    padding-bottom: 60px;
+        
+    @media screen and (min-width: 768px) {
+        padding-top: 30px;}
+        
+    @media screen and (min-width: 1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;}    
+
+    &-list {
+        @media screen and (min-width: 768px) {
             display: flex;
             flex-wrap: wrap;
-        }
+            margin: -15px;}}
 
     &-content{
             padding: 20px 24px;
             border-right: 1px solid #EEEEEE;
             border-bottom: 1px solid #EEEEEE;
             border-left: 1px solid #EEEEEE;}
-   
-}
 
-.portfolio-hero-item{
-    width: 370px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-}
-
-.portfolio-hero-item:nth-child(3n){
-    margin-right: 0;
-}
-
-.portfolio-hero-item:nth-last-child(-n+3){
-    margin-bottom: 0;
+    &-item{
+        @media screen and (min-width: 480px) {
+            width: 450px;
+            &:not(:last-child){
+                margin-bottom: 30px;
+            }}
+        
+        @media screen and (min-width: 768px) {
+            width: calc(100% / 2 - 30px);
+            margin: 15px;}
+        
+        @media screen and (min-width: 1200px) {
+            width: calc(100% / 3 - 30px);
+            margin: 15px;}}
+           
 }
 
 .portfilio-hero-wrap{
@@ -60,11 +82,11 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+
 .portfolio-hero-link{
-    display: block;
-    transition-property:box-shadow;
-    transition-duration:250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    display: flex;
+    flex-direction: column;
+    height: 100%;   
 }
 
 .portfolio-hero-link:focus, .portfolio-hero-link:hover{
@@ -73,7 +95,9 @@
     0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
  }
-
+ 
+.portfolio-hero-img
+{width: 100%;}
 
 .portfolio-hero-title{
     margin-top: 0px;
@@ -92,3 +116,22 @@
     letter-spacing: 0.03em;
     color: #757575;
 }
+
+.portfolio-hero-content{
+    flex-grow: 1;
+}
+
+
+// .portfolio-hero-item:nth-child(3n){
+//     margin-right: 0;
+// }
+
+// .portfolio-hero-item:nth-last-child(-n+3){
+//     margin-bottom: 0;
+// }
+
+ // @media screen and (max-width: 767.98px) {
+ //     margin-bottom: 30px;
+
+ //     &:last-child {
+ //     margin-bottom: 0px;}}
