--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,26 +1,57 @@
 .section-team {
     background-color: var(--background-color-team);
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    
+        @media screen and (min-width: 1200px) {
+            padding-top: 94px;
+            padding-bottom: 94px;
+        }
 
     &__title{
         margin-bottom: 50px;
-        margin-top: 0;}
+        margin-top: 0;
+    @media screen and (min-width: 768px) {
+            
+        }
+    
+        @media screen and (min-width: 1200px) {
+        
+        }
+    }
     }
 
 .team-list {
-    display: flex;
+
+    @media screen and (min-width: 768px) {
+    
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: -30px;
+        margin-left: -30px;
+        }
 
     &__item{
-        width: 270px;
+
+        margin-bottom: 30px;
+            
+        @media screen and (min-width: 768px) {
+            width: calc(100% / 2 - 30px);
+            margin-left: 30px;
+            }
+            
+        @media screen and (min-width: 1200px) {
+            width: calc(100% / 4 - 30px);
+            }
         background: #FFFFFF;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
             0px 1px 1px rgba(0, 0, 0, 0.14),
             0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;}
 
-    &__item+&__item{margin-left: 30px;}
-
+    &__img{
+        width: 100%;
+    }
     &__content{
         padding: 30px;}
 
