--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -1,6 +1,11 @@
 .section-work{
+    display: none;
     padding-top: 0;
     padding-bottom: 94px;
+
+    @media screen and (min-width: 1200px){
+        display: block;
+    }
 
     &__title{
     margin-bottom: 50px;
