--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -20,9 +20,9 @@
 }
 
 .close {
-    display: block;
-    margin-left: auto;
-    margin-bottom: 8.33px;
+    position: absolute;
+    top: 21px;
+    right: 21px;
     
 }
 
