--- a/sass/components/_button-portfolio.scss
+++ b/sass/components/_button-portfolio.scss
@@ -32,8 +32,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    padding-top: 0;
-    padding-bottom: 30px;  
+    margin-bottom: 30px;  
     @media screen and (min-width: 768px) {
             justify-content: center;
             padding-bottom: 40px;        
