--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -144,12 +144,15 @@
     }
 
     .menu-info__item{
-        margin-bottom: 10px;
+        @media not screen and (min-width: 1199){
+            &:not(:last-child) {
+            margin-bottom: 10px;
+            }}
+        
         &+&{ 
             @media screen and (min-width: 1200px) {
-                    margin-left: 30px;
+                    margin-left: 30px;}
                 }
-        }
     }
  
       
