--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -16,12 +16,13 @@
         }
     
         @media screen and (min-width: 1200px) {
-        
+            width: calc(100% / 4 - 30px);
         }
     }
     }
 
 .team-list {
+    margin-bottom: -30px;
 
     @media screen and (min-width: 768px) {
     
